--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "format": "prettier --write './**/*{ts,tsx}'"
   },
   "dependencies": {
     "expo": "~48.0.15",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "prettier": "^2.8.8",
     "typescript": "^4.9.4"
   },
   "private": true
