--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "format": "prettier --write './**/*{ts,tsx}'"
+    "format": "prettier --write './**/*{ts,tsx}'",
+    "check-typescript": "tsc --noEmit"
   },
   "dependencies": {
     "expo": "~48.0.15",
