--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "format": "prettier --write './**/*{ts,tsx}'",
-    "check-typescript": "tsc --noEmit"
+    "check-typescript": "tsc --noEmit",
+    "eslint:all": "eslint './**/*{ts,tsx}'"
   },
   "dependencies": {
     "expo": "~48.0.15",
@@ -19,6 +20,12 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
+    "eslint": "^8.41.0",
+    "eslint-config-universe": "^11.2.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.8",
     "typescript": "^4.9.4"
   },
