--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "prettier --write './**/*{ts,tsx}'",
     "check-typescript": "tsc --noEmit",
     "eslint:all": "eslint './**/*{ts,tsx}'",
-    "lint": "yarn eslint:all && yarn check-typescript"
+    "lint": "yarn eslint:all && yarn check-typescript",
+    "prepare": "husky install"
   },
   "dependencies": {
     "expo": "~48.0.15",
@@ -27,6 +28,8 @@
     "eslint-config-universe": "^11.2.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
     "typescript": "^4.9.4"
   },
