--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "jest": "^29.2.1",
     "jest-expo": "^48.0.2",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "react-native-safe-area-context": "4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
